# lexepub

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  index.html  manifest.webmanifest  registerSW.js  sw.js  sw.js.map  workbox-57884417.js  workbox-57884417.js.map
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build-wasm.yml  c-bindings.yml  ci-bench.yml  compatibility.yml  lint.yml  release-cargo.yml  release-npm.yml  release.yml  security-audit.yml  static.yml  test.yml
Demo/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.mjs
Demo/public/epubs/: lytton-strachey_eminent-victorians.epub  lytton-strachey_eminent-victorians_advanced.epub
Demo/src/: book.js  indexedDB.js  library.js  main.js  style.css
Demo/src/wasm/: lexepub.d.ts  lexepub.js  lexepub_bg.wasm  lexepub_bg.wasm.d.ts
Docs/: docmd.config.js  package-lock.json  package.json
Docs/docs/: index.md
Docs/docs/adapters/c/: index.md
Docs/docs/adapters/rust/: index.md
Docs/docs/adapters/wasm/: index.md
Docs/docs/getting-started/: quickstart.md
assets/: index-CQc7iM_5.css  index-C_4v9zS1.js  index-C_4v9zS1.js.map  index-CpxUFyrh.js  index-CpxUFyrh.js.map  index-Cy_GPcxW.js  index-Cy_GPcxW.js.map  index-Dh5lVEzT.js  index-Dh5lVEzT.js.map  index-Y0HT7-XM.css  index-zqBkchKJ.js  index-zqBkchKJ.js.map  lexepub_bg-6QBB1fwv.wasm  lexepub_bg-C9YBf47T.wasm
docs/: 404.html  index.html  llms-full.txt  llms.json  llms.txt  robots.txt  search-index.json  sitemap.xml
docs/adapters/c/: index.html
docs/adapters/rust/: index.html
docs/adapters/wasm/: index.html
docs/assets/css/: docmd-highlight-dark.css  docmd-highlight-light.css  docmd-main.css  docmd-theme-retro.css  docmd-theme-ruby.css  docmd-theme-sky.css
docs/assets/js/: docmd-api.js  docmd-i18n-strings.js  docmd-image-lightbox.js  docmd-main.js  docmd-search.js
docs/getting-started/quickstart/: index.html
docs/okf/: index.md  okf.yaml
docs/okf/_meta/: bundle.json  lint-report.txt
docs/okf/concepts/: adapters-c.md  adapters-rust.md  adapters-wasm.md  getting-started-quickstart.md  root.md
epubs/: captain-charles-johnson_a-general-history-of-the-pirates.epub  lytton-strachey_queen-victoria.epub  walter-noble-burns_tombstone.epub  walter-noble-burns_tombstone_advanced.epub
lexepub/: Cargo.toml  README.md  build.rs  diplomat.toml
lexepub/benches/: bench_lib.rs  comparison.rs  lib.rs  library.rs  main.rs
lexepub/benches/comparisons/: epub_adapter.rs  epubie_lib_adapter.rs  lexepub_adapter.rs  lib_epub_adapter.rs  mod.rs
lexepub/examples/epubs/: captain-charles-johnson_a-general-history-of-the-pirates_advanced.epub  mark-twain_personal-recollections-of-joan-of-arc.epub  test-book.epub  working-test.epub
lexepub/include/: EpubExtractor.d.h  EpubExtractor.h  EpubInfo.d.h  EpubInfo.h  free_functions.h
lexepub/src/: allocator.rs  epub.rs  error.rs  ffi.rs  lib.rs  metadata.rs  parser.rs  reader.rs  wasm.rs
lexepub/src/core/: chapter.rs  container.rs  css.rs  extractor.rs  html_parser.rs  mod.rs  ncx_parser.rs  opf_parser.rs
lexepub/src/core/html_parser/: mod.rs  streaming.rs  tl.rs
lexepub/tests/: api_tests.rs  container_tests.rs  css_apply_tests.rs  css_tests.rs  edge_cases_tests.rs  epub_features_tests.rs  error_handling_tests.rs  extractor_tests.rs  formatting_tests.rs  html_parser_tests.rs  integration_tests.rs  memory_limits.rs  opf_parser_tests.rs  performance_tests.rs  streaming_tests.rs
