[package]
name = "lexepub"
version = "0.1.0"
edition = "2021"
authors = ["NellowTCS"]
license = "Apache-2.0"
repository = "https://github.com/NellowTCS/lexepub"
keywords = ["epub", "parser", "streaming", "ebook", "fast"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"

[lib]
name = "lexepub"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
quick-xml = "0.37"
# cssparser = { version = "0.34", optional = true }
# quickjs-rs = { version = "0.5", optional = true }
scraper = "0.20"
async_zip = { version = "0.0.17", features = ["tokio", "deflate", "deflate64"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bytes = "1.0"
diplomat = "0.7"
diplomat-runtime = "0.7"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
# css = ["cssparser"]
# js = ["quickjs-rs"]
wasm = []
c-ffi = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[[bin]]
name = "lexepub"
path = "bin/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
