[package]
name = "lexepub"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming EPUB parser and extractor for Rust, WASM, and C/C++."
authors = ["NellowTCS"]
license = "Apache-2.0"
repository = "https://github.com/NellowTCS/lexepub"
keywords = ["epub", "parser", "streaming", "ebook", "fast"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"

[lib]
name = "lexepub"
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
quick-xml = "0.37"
# quickjs-rs = { version = "0.5", optional = true }
scraper = "0.20"
async_zip = { version = "0.0.17", features = ["deflate", "deflate64"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bytes = "1.0"
embassy-executor = { version = "0.9.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
diplomat = "0.7"
diplomat-runtime = "0.7"

[features]
default = []
# js = ["quickjs-rs"]
wasm = []
c-ffi = []
embassy = ["embassy-executor/arch-std", "embassy-executor/executor-thread"]
lowmem = []

[dev-dependencies]
criterion = "0.4"
jemallocator = "0.5"
jemalloc-ctl = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "lexepub"
path = "bin/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
