[package]
name = "lexepub"
version = "0.1.1"
edition = "2021"
description = "High-performance streaming EPUB parser and extractor for Rust, WASM, and C/C++."
authors = ["NellowTCS"]
license = "Apache-2.0"
repository = "https://github.com/NellowTCS/lexepub"
keywords = ["epub", "parser", "streaming", "ebook", "fast"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"
exclude = ["examples/*"]

[lib]
name = "lexepub"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lexepub-cli"
path = "bin/main.rs"

[features]
default = []
# js = ["quickjs-rs"]
wasm = []
c-ffi = []
embassy = ["embassy-executor/platform-std", "embassy-executor/executor-thread"]
lowmem = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies]
futures = "0.3.32"
quick-xml = "0.39.2"
# quickjs-rs = { version = "0.5", optional = true }
tl = "0.7"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
bytes = "1.11.1"
embassy-executor = { version = "0.10.0", optional = true }
html-escape = "0.2"

[dev-dependencies]
criterion = "0.8.2"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
epub = "2.1.5"
lib-epub = "0.3.1"
epubie-lib = "0.1.1"
ratatui = "0.30.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
diplomat = "0.15.0"
diplomat-runtime = "0.15.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.120"
js-sys = "0.3.97"
web-sys = "0.3.97"
wasm-bindgen-futures = "0.4.70"
serde-wasm-bindgen = "0.6.5"
getrandom_04 = { package = "getrandom", version = "0.4.2", features = ["wasm_js"] }

[[bench]]
name = "bench_lib"
path = "benches/lib.rs"
harness = false

[[bench]]
name = "comparison"
path = "benches/comparison.rs"
harness = false
